syntax = "proto2";
package message;
option go_package = "initialthree/protocol/cs/message";

message bigSecretWeakness{
    optional int32 level    = 1; //层级
    repeated int32 weakness = 2; // 弱点
}

message bigSecretData{
    optional int32 maxLevel = 1; // 解锁的最大关卡
    optional int32 keyCount = 2;
    optional int32 weaknessRefreshTimes = 3;
    optional int32 blessingLevel = 4;
    optional int32 blessingCount = 5;
}

message bigSecretShop{
    optional int32 id = 1;
    optional int32 buyTimes = 2;
}

message bigSecretSync_toS {}

message bigSecretSync_toC {
    optional bool isAll = 1;
    optional bigSecretData data  = 2;
    repeated int32 passed = 3; // 通关的关卡。当 isAll 为 false 时，这里表示新增
    repeated bigSecretWeakness weakness = 4; // 当天已经刷新的关卡弱点。
    repeated bigSecretShop shop         = 5; // 商店购买次数
}